# kuro2sudachi

./: .gitignore  Makefile  README.md  pyproject.toml  test.txt
.github/workflows/: pytest.yml
example/: .gitignore  Makefile  README.md
example/config/: char.def  convert_config.json  kuro2sudachi.json  kuromoji_dict.txt  sudachi.json  sudachi_for_build.json  sudachi_user_dict_for_merge.txt  unk.def
src/kuro2sudachi/: core.py  normalizer.py
src/kuro2sudachi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: convert_config.json  convert_setting.json  kuromoji_dict.txt  kuromoji_dict_test.txt  kuromoji_dict_with_split_mode.txt  sudachi_dict.txt  sudachi_dict_test.txt  sudachi_dict_with_custom_pos.txt  sudachi_dict_with_split_mode.txt  sudachi_with_custom_pos_dict.txt  test_kuro2sudachi.py
