[tool.poetry]
name = "kuro2sudachi"
version = "0.2.3"
description = ""
authors = ["po3rin"]
repository = "http://github.com/po3rin/kuro2sudachi"
homepage = "http://github.com/po3rin/kuro2sudachi"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.scripts]
kuro2sudachi = "kuro2sudachi.core:cli"

[tool.poetry.dependencies]
python = "^3.7"
jaconv = "^0.2.4"
importlib-metadata = "^3.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
