[tool.poetry]
name = "kuro2sudachi"
version = "0.4.7"
description = ""
authors = ["po3rin"]
repository = "http://github.com/po3rin/kuro2sudachi"
homepage = "http://github.com/po3rin/kuro2sudachi"
readme = "README.md"
license = "Apache-2.0"
include = ["rewrite.def"]

[tool.poetry.scripts]
kuro2sudachi = "kuro2sudachi.core:cli"

[tool.poetry.dependencies]
python = "^3.11"
jaconv = "^0.2.4"
importlib-metadata = "^6.7.0"
sudachipy = "^0.6.7"
sudachidict-core = "^20250129"
sudachidict-full = "^20250129"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^6.2.2"
twine = "^4.0.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
